@@ -1521,6 +1521,136 @@ bool canonicalize_mm(Geometry &geom, IterationControl it_ctrl,
   return completed;
 }
 
+// P and Q are modified
+void move_line_to_point(Vec3d &P, Vec3d &Q, const Vec3d &X)
+{
+  Vec3d Y = X + (Q - P);
+  Vec3d V = P + X;
+  Vec3d P2 = lines_intersection(P, V, X, Y, 0);
+  if (P2.is_set()) {
+    Q += P2 - P;
+    P = P2;
+  }
+}
+
+// RK - edge near points of base seek 1
+bool canonicalize_unit(Geometry &geom, IterationControl it_ctrl,
+                       const double radius_range_percent,
+                       const bool planarize_only)
+{
+  bool completed = false;
+  it_ctrl.set_finished(false);
+
+  vector<vector<int>> edges;
+  geom.get_impl_edges(edges);
+
+  vector<Vec3d> &verts = geom.raw_verts();
+
+  double test_val = it_ctrl.get_test_val();
+  double max_diff2 = 0;
+
+  for (it_ctrl.start_iter(); !it_ctrl.is_done(); it_ctrl.next_iter()) {
+    vector<Vec3d> verts_last = verts;
+
+    if (!planarize_only) {
+      vector<Vec3d> near_pts;
+      for (auto &edge : edges) {
+        // unit near point
+        Vec3d P = geom.edge_nearpt(edge, Vec3d(0, 0, 0)).unit();
+        near_pts.push_back(P);
+        move_line_to_point(verts[edge[0]], verts[edge[1]], P);
+      }
+
+      // re-center for drift
+      Vec3d cent_near_pts = centroid(near_pts);
+      for (unsigned int i = 0; i < verts.size(); i++)
+        verts[i] -= cent_near_pts;
+    }
+
+    for (unsigned int f = 0; f < geom.faces().size(); f++) {
+      /*
+            // give polygon its own geom. face index needs to reside in vector
+            vector<int> face_idxs(1);
+            face_idxs[0] = f;
+            Geometry polygon = faces_to_geom(geom, face_idxs);
+            plane_face(polygon);
+
+            // map vertices back into original geom
+            // the numerical order of vertex list in polygon geom is preserved
+            vector<int> v_idx;
+            for (int v : geom.faces(f))
+              v_idx.push_back(v);
+            sort(v_idx.begin(), v_idx.end());
+            int j = 0;
+            for (int v : v_idx)
+              verts[v] = polygon.verts(j++);
+      */
+      // RK - this does formulaically what the above does by brute force
+      Vec3d face_normal = face_norm(geom.verts(), geom.faces(f)).unit();
+      Vec3d face_centroid = geom.face_cent(f);
+      // make sure face_normal points outward
+      if (vdot(face_normal, face_centroid) < 0)
+        face_normal *= -1.0;
+      // place a planar vertex over or under verts[v]
+      // adds or subtracts it to get to the planar verts[v]
+      for (int v : geom.faces(f))
+        verts[v] += vdot(face_normal, face_centroid - verts[v]) * face_normal;
+    }
+
+    string finish_msg;
+    if (it_ctrl.is_status_check_iter()) {
+      // len2() for difference value to minimize internal sqrt() calls
+      max_diff2 = 0;
+      for (unsigned int i = 0; i < verts.size(); i++) {
+        double diff2 = (verts[i] - verts_last[i]).len2();
+        if (diff2 > max_diff2)
+          max_diff2 = diff2;
+      }
+
+      if (sqrt(max_diff2) < test_val) {
+        completed = true;
+        it_ctrl.set_finished();
+        finish_msg = "solved, test value achieved";
+      }
+      else if (it_ctrl.is_last_iter()) {
+        // reached last iteration without solving
+        it_ctrl.set_finished();
+        finish_msg = "not solved, test value not achieved";
+      }
+
+      // check if radius is expanding or contracting unreasonably,
+      // but only for the purpose of finishing early
+      // if minimum and maximum radius are differing, the polyhedron is
+      // crumpling
+      if (radius_range_percent &&
+          canonical_radius_range_test(geom, radius_range_percent)) {
+        if (!it_ctrl.is_finished())
+          it_ctrl.set_finished();
+        finish_msg = "breaking out: radius range detected. try increasing -d";
+      }
+    }
+
+    if (it_ctrl.is_status_report_iter()) {
+      if (it_ctrl.is_finished())
+        it_ctrl.print("Final iteration (%s):\n", finish_msg.c_str());
+
+      it_ctrl.print("%-12u max_diff:%17.15e\n", it_ctrl.get_current_iter(),
+                    sqrt(max_diff2));
+    }
+  }
+
+  return completed;
+}
+
+// RK - wrapper for basic planarization with unit algorithm
+// meant to be called with finite num_iters (not -1)
+bool planarize_unit(Geometry &geom, IterationControl it_ctrl)
+{
+  double radius_range_percent = 0;
+  bool planarize_only = true;
+  return canonicalize_unit(geom, it_ctrl, radius_range_percent, planarize_only);
+}
+
 void realign_output(Geometry &base)
 {
   Symmetry sym(base);
